--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mithril TypeScript App</title>
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta
+      http-equiv="Cache-Control"
+      content="max-age=3600 Expires=Tue, 15 May 2028 07:19:00 GMT public must-revalidate"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, shrink-to-fit=no, initial-scale=1,  maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-starturl" content="/" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <title>Boaz Blake Portfolio</title>
   </head>
   <body>
     <div id="app"></div>
