--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     />
     <meta
       name="viewport"
-      content="width=device-width, shrink-to-fit=no, initial-scale=1,  maximum-scale=1.0, minimum-scale=1.0"
+      content="width=device-width, shrink-to-fit=no, initial-scale=1,  maximum-scale=1.0, minimum-scale=1.0, user-scale=no"
     />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="msapplication-starturl" content="/" />
