--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <title>Boaz Blake Portfolio</title>
   </head>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S17XGKBYRR"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S17XGKBYRR');
+  </script>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/index.ts"></script>
