--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <title>Boaz Blake Portfolio</title>
   </head>
-    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S17XGKBYRR"></script>
+      <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PF9X6YTXLV"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-S17XGKBYRR');
+    gtag('config', 'G-PF9X6YTXLV');
   </script>
   <body>
     <div id="app"></div>
