--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   </script>
   <body>
     <div id="app"></div>
+    <link rel="stylesheet"
+    href="https://unpkg.com/@ivteplo/utilities.css@1.0.0/build/main.css">
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
