--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="msapplication-starturl" content="/" />
     <meta name="mobile-web-app-capable" content="yes" />
     <title>Boaz Blake Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="/images/me.webp">
   </head>
       <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PF9X6YTXLV"></script>
