--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="viewport"
-      content="width=device-width, shrink-to-fit=no, initial-scale=1,  maximum-scale=1.0, minimum-scale=1.0, user-scale=no"
+      content="width=device-width, shrink-to-fit=no, initial-scale=1,  maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
